--- a/.github/workflows/ctf.yaml
+++ b/.github/workflows/ctf.yaml
@@ -8,9 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install Deps
-        uses: mstksg/get-package@master
-        with:
-          apt-get: git python3-jinja2 python3-yaml python3-setuptools python3-deepdiff python3-git python3-github python3-requests xmldiff
+        run: sudo apt-get update && sudo apt-get install git python3-jinja2 python3-yaml python3-setuptools python3-deepdiff python3-git python3-github python3-requests xmldiff
       - name: Checkout
         uses: actions/checkout@v3
         with:
